Implemented show more for collections
Implemented show more for collections button to show more links in For Collections. Updated main page, stylesheet, and main functions javascript.

--- a/assets/styles/stylesheet.css
+++ b/assets/styles/stylesheet.css
@@ -756,6 +756,10 @@ body {
 	background-color: rgb(255, 255, 255, .1);
 }
 
+.more-lf-forcollections {
+	display: none;
+}
+
 .more-lf-anitube { 
 	display: none;
 }
